fix: base uri remove www

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://www.g4s8.wtf"
+baseURL = "https://g4s8.wtf"
 languageCode = "en-us"
 title = "Kirill Che. (g4s8)"
 theme = "hugo-coder"
