--- a/config.toml
+++ b/config.toml
@@ -45,7 +45,7 @@ disqusShortname = "g4s8-github-io"
     name = "Twitter"
     icon = "fab fa-twitter fa-2x"
     weight = 2
-    url = "https://twitter.com/kirill_g4s8/"
+    url = "https://twitter.com/kiryll_che"
 [[params.social]]
     name = "Stackoverflow"
     icon = "fab fa-stack-overflow fa-2x"
@@ -55,7 +55,12 @@ disqusShortname = "g4s8-github-io"
     name = "Telegram"
     icon = "fab fa-telegram fa-2x"
     wight = 4
-    url = "https://t.me/kirill_g4s8"
+    url = "https://t.me/kiryll_che"
+[[params.social]]
+    name = "LinkedIn"
+    icon = "fab fa-linkedin fa-2x"
+    wight = 5
+    url = "https://www.linkedin.com/in/kirill-che"
 
 [languages]
     [languages.en]
