--- a/config.toml
+++ b/config.toml
@@ -30,6 +30,18 @@ enableRobotsTXT = true
     customCSS = ["css/stork.css"]
     customJS = ["js/stork.js", "js/custom.js"]
 
+    license = """ \
+     <div xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"> \
+     <a property="dct:title" rel="cc:attributionURL" href="https://g4s8.wtf">g4s8.wtf website</a> \
+     by <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://g4s8.wtf/about">Kirill Che.</a> \
+     is licensed under \
+     <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY 4.0 \
+     <img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1">\
+     <img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1">\
+     </a>\
+     </div>\
+    """
+
 [params.clicky]
   id = "101432902"
 
@@ -102,7 +114,8 @@ tag = "tags"
   imgsrc = [
     "'self'",
     "https://avatars0.githubusercontent.com",
-    "https://licensebuttons.net"
+    "https://licensebuttons.net",
+    "https://mirrors.creativecommons.org"
   ]
   objectsrc = ["'none'"]
   stylesrc = [
