--- a/config.toml
+++ b/config.toml
@@ -31,15 +31,18 @@ enableRobotsTXT = true
     customJS = ["js/stork.js", "js/custom.js"]
 
     license = """ \
-     <div xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"> \
-     <a property="dct:title" rel="cc:attributionURL" href="https://g4s8.wtf">g4s8.wtf website</a> \
-     by <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://g4s8.wtf/about">Kirill Che.</a> \
-     is licensed under \
-     <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY 4.0 \
-     <img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1">\
-     <img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1">\
-     </a>\
+     <div xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/" style="display: inline-block;"> \
+       <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY 4.0 \
+         <img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1">\
+         <img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1">\
+       </a> \
+       (\
+       <a property="dct:title" rel="cc:attributionURL" href="https://g4s8.wtf">g4s8.wtf</a> \
+       by \
+       <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://g4s8.wtf/about">Kirill Che.</a>\
+       )\
      </div>\
+     <br/>\
     """
 
 [params.clicky]
