--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,17 +9,18 @@ phases:
       - apt install ./hugo_extended_0.119.0_linux-amd64.deb
       - rm ./hugo_extended_0.119.0_linux-amd64.deb
       - hugo env
-      - wget --quiet https://github.com/jameslittle230/stork/releases/download/v1.6.0/stork-ubuntu-20-04
-      - chmod +x ./stork-ubuntu-20-04
-      - ./stork-ubuntu-20-04 --version
+      - wget https://github.com/CloudCannon/pagefind/releases/download/v1.0.3/pagefind_extended-v1.0.3-x86_64-unknown-linux-musl.tar.gz
+      - tar -xvzf pagefind_extended-v1.0.3-x86_64-unknown-linux-musl.tar.gz 
+      - rm pagefind_extended-v1.0.3-x86_64-unknown-linux-musl.tar.gz 
       - rm -fr themes/hugo-coder
+      - ./pagefind_extended --version
       - git clone --depth 1 https://github.com/luizdepra/hugo-coder.git themes/hugo-coder
   build:
     commands:
       - export GIT_COMMIT_SHA=$CODEBUILD_RESOLVED_SOURCE_VERSION
       - export GIT_COMMIT_SHA_SHORT=$(echo $GIT_COMMIT_SHA | cut -c '-6')
-      - ./stork-ubuntu-20-04 build --input stork.toml --output static/stork.st
       - hugo
+      - ./pagefind_extended --site ./public
   post_build:
     commands:
 artifacts:
