--- a/config.toml
+++ b/config.toml
@@ -28,6 +28,7 @@ enableRobotsTXT = true
     maxSeeAlsoItems = 5
 
     customJS = ["js/custom.js"]
+    enableRobotsTXT = true
 
     license = """ \
      <div xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/" style="display: inline-block;"> \
