--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ enableRobotsTXT = true
     author = "Kirill Che."
     description = "Kirill Che. personal website"
     info = "Website about Go, distributed systems, high-load"
-    avatarurl = "https://avatars0.githubusercontent.com/u/1524988?s=460&v=4"
+    avatarurl = "/img/av0_457x457.webp"
 
     dateformat = "January 2, 2006"
 
@@ -33,8 +33,8 @@ enableRobotsTXT = true
     license = """ \
      <div xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/" style="display: inline-block;"> \
        <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY 4.0 \
-         <img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1">\
-         <img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1">\
+         <img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" alt="CC" src="/img/cc_22x22.webp">\
+         <img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" alt="BY" src="/img/by_22x22.webp">\
        </a> \
        (\
        <a property="dct:title" rel="cc:attributionURL" href="https://g4s8.wtf">g4s8.wtf</a> \
