ci: purify css files

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,6 +20,16 @@ phases:
       - export GIT_COMMIT_SHA=$CODEBUILD_RESOLVED_SOURCE_VERSION
       - export GIT_COMMIT_SHA_SHORT=$(echo $GIT_COMMIT_SHA | cut -c '-6')
       - hugo
+      - >
+        mkdir -pv /tmp/hugo/min
+        find ./publ/css/ -type f -name '*.css' -exec sh -c '
+          for css_file; do
+            echo "purify $css_file"
+            purifycss "$css_file" "./public/**/*.html" --out "/tmp/hugo/min/$(basename $css_file)" -m -i
+            mv -v "/tmp/hugo/min/$(basename $css_file)" "$css_file"
+          done
+        ' sh {} +
+        rm -fr /tmp/hugo/min
       - ./pagefind_extended --site ./public
   post_build:
     commands:
