--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,14 +4,15 @@ phases:
   pre_build:
     commands:
       - apt-get update -y
-      - apt-get install git wget zip libssl-dev -y
-      - wget --quiet https://github.com/gohugoio/hugo/releases/download/v0.126.1/hugo_extended_0.126.1_linux-amd64.deb
+      - apt-get install git wget zip libssl-dev npm -y
+      - wget --quiet https://github.com/gohugoio/hugo/releases/download/v0.134.2/hugo_extended_0.134.2_linux-amd64.deb
       - apt install ./hugo_extended_0.126.1_linux-amd64.deb
       - rm ./hugo_extended_0.126.1_linux-amd64.deb
       - hugo env
-      - wget https://github.com/CloudCannon/pagefind/releases/download/v1.1.0/pagefind_extended-v1.1.0-x86_64-unknown-linux-musl.tar.gz
+      - wget --quiet https://github.com/CloudCannon/pagefind/releases/download/v1.1.0/pagefind_extended-v1.1.0-x86_64-unknown-linux-musl.tar.gz
       - tar -xvzf pagefind_extended-v1.1.0-x86_64-unknown-linux-musl.tar.gz 
       - rm pagefind_extended-v1.1.0-x86_64-unknown-linux-musl.tar.gz 
+      - npm install -g purify-css
       - rm -fr themes/hugo-coder
       - ./pagefind_extended --version
       - git clone --depth 1 https://github.com/luizdepra/hugo-coder.git themes/hugo-coder
